--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'io.fabric'
 
 android {
 
-    compileSdkVersion 28
+    compileSdkVersion 34
     buildToolsVersion '28.0.3'
     lintOptions {
         checkReleaseBuilds false
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         applicationId "com.stipess.youplay"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 34
         versionCode 73
         versionName "2.2.0"
         buildConfigField 'String', 'YOUPLAY_WEBSITE', '"https://youplayandroid.com"'
@@ -46,11 +46,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
         coreLibraryDesugaringEnabled true
     }
     productFlavors {
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
