--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'io.fabric'
 android {
 
     compileSdkVersion 34
-    buildToolsVersion '28.0.3'
+    buildToolsVersion '34.0.0'
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -63,38 +63,38 @@ java {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    androidTestImplementation'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.liulishuo.filedownloader:library:1.7.7'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:21.3.0'
 
-    implementation 'com.github.TeamNewPipe:NewPipeExtractor:0.20.8'
-    implementation "com.squareup.okhttp3:okhttp:3.12.11"
-    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'org.schabi.newpipe:extractor:0.23.3'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'org.jsoup:jsoup:1.17.1'
     implementation 'com.github.TeamNewPipe:nanojson:1d9e1aea9049fc9f85e68b43ba39fe7be1c1f751'
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
 
 
     implementation 'pub.devrel:easypermissions:3.0.0'
 
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.preference:preference:1.1.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.gms:google-services:4.3.4'
-    implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+    implementation 'com.google.gms:google-services:4.3.15'
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 
 }
 
@@ -120,7 +120,7 @@ buildscript {
 
         // We recommend changing it to the latest version from our changelog:
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.28.0'
+        classpath 'io.fabric.tools:gradle:1.31.2'
     }
 }
 apply plugin: 'com.google.gms.google-services'
