--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
+    namespace 'com.stipess.youplay'
 
     compileSdkVersion 34
     buildToolsVersion '34.0.0'
