--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,14 +89,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.gms:google-services:4.3.15'
+    implementation 'com.google.gms:google-services:4.4.2'
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
 }
 
 repositories {
+    google()
+    mavenCentral()
     jcenter()
     maven { url "https://jitpack.io" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
@@ -104,7 +106,6 @@ repositories {
         url "https://cdn01.static.adfalcon.com/sdk/android/maven"
     }
     maven { url 'https://s3.amazonaws.com/moat-sdk-builds' }
-    google()
 
 }
 apply plugin: 'com.google.gms.google-services'
