Enable BuildConfig generation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     namespace 'com.stipess.youplay'
 
     compileSdkVersion 35
+    buildFeatures {
+        buildConfig true
+    }
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
