--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=35
