--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,11 +71,8 @@ dependencies {
     implementation 'com.liulishuo.filedownloader:library:1.7.7'
     implementation 'com.google.firebase:firebase-analytics:22.4.0'
 
-    // Use NewPipeExtractor from JitPack
-    // Older versions used the "v" prefix in the tag name, but the latest
-    // releases are published without it. Use the version number directly so
-    // Gradle can resolve the artifact from JitPack.
-    implementation 'com.github.TeamNewPipe:NewPipeExtractor:0.23.3'
+    // Use NewPipeExtractor from Maven Central
+    implementation 'org.schabi.newpipe:extractor:0.27.7'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'org.jsoup:jsoup:1.17.2'
     implementation 'com.github.TeamNewPipe:nanojson:1d9e1aea9049fc9f85e68b43ba39fe7be1c1f751'
