--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:name="com.stipess.youplay.MainActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppThemeLauncher"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter>
                 <action
                     android:name="android.intent.action.MAIN"
@@ -51,7 +52,9 @@
             android:name="com.stipess.youplay.listeners.ButtonListener"
             android:exported="false" />
 
-        <receiver android:name="com.stipess.youplay.listeners.AudioOutputListener">
+        <receiver
+            android:name="com.stipess.youplay.listeners.AudioOutputListener"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
