--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ java {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
