Remove equals in minSdkVersion property

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     defaultConfig {
         applicationId "com.stipess.youplay"
-        minSdkVersion = 21
+        minSdkVersion 21
         targetSdkVersion = 35
         versionCode = 73
         versionName = "2.2.0"
