--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     implementation 'androidx.media3:media3-extractor:1.7.1'
     implementation 'androidx.media:media:1.7.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
+    implementation 'org.apache.commons:commons-text:1.11.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
 }
